--- a/_notebooks/2022-08-25-bashnb.ipynb
+++ b/_notebooks/2022-08-25-bashnb.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -190,6 +190,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Python 2.7.18\n",
+      "Checking for Python2...\n",
+      "Python2 exists\n",
+      "Checking for Python3...\n",
+      "bash: [: Python: binary operator expected\n",
+      "Python3 exists\n",
+      "Checking for Java...\n",
+      "bash: [: too many arguments\n",
+      "Java exists\n",
+      "Checking for Javac\n",
+      "bash: [: javac: binary operator expected\n",
       "[sudo] password for junlim954: \n"
      ]
     }
@@ -207,28 +218,28 @@
     "if [ ! -d $PYTHON2 ]\n",
     "then\n",
     "    echo \"Downloading Python2\"\n",
-    "    # sudo apt install python2\n",
+    "    sudo apt install python2\n",
     "fi\n",
     "echo \"Python2 exists\"\n",
     "echo \"Checking for Python3...\"\n",
     "if [ ! -d $PYTHON3 ]\n",
     "then\n",
     "    echo \"Downloading Python3\"\n",
-    "    # sudo apt install python3\n",
+    "    sudo apt install python3\n",
     "fi\n",
     "echo \"Python3 exists\"\n",
     "echo \"Checking for Java...\"\n",
     "if [ ! -d $JAVA ]\n",
     "then\n",
     "    echo \"Downloading Java\"\n",
-    "    # sudo apt install default-jdk\n",
+    "    sudo apt install default-jdk\n",
     "fi\n",
     "echo \"Java exists\"\n",
     "echo \"Checking for Javac\"\n",
     "if [ ! -d $JAVAC ]\n",
     "then \n",
     "    echo \"Downloading Javac\"\n",
-    "    # sudo apt install default-jre\n",
+    "    sudo apt install default-jre\n",
     "fi\n",
     "# sudo apt install unzip"
    ]
