--- a/_notebooks/2022-09-05-javagui.ipynb
+++ b/_notebooks/2022-09-05-javagui.ipynb
@@ -3,7 +3,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Java GUI Notebook\n",
+    "> Attempts in Java GUIs and such\n",
+    "\n",
+    "- toc: true\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Java]\n",
+    "- image: images/Java-Logo.png"
+   ]
   },
   {
    "cell_type": "code",
