--- a/_notebooks/2022-09-05-javagui.ipynb
+++ b/_notebooks/2022-09-05-javagui.ipynb
@@ -16,6 +16,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Java Menu for Physics - Milligrams to other measurements\n",
+    "- No rounding: everything is made exact, double is used to ensure this"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {
     "vscode": {
