--- a/_notebooks/2022-08-31-codedotorgnb.ipynb
+++ b/_notebooks/2022-08-31-codedotorgnb.ipynb
@@ -13,6 +13,35 @@
     "- permalink: /unit/2\n",
     "- image: images/1200px-Code.org_logo.svg.png"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Code.org](/images/codeorg.PNG \"Code.org lesson 15\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Code.org helped me realize that objects can be created and used\n",
+    "- Once they are created, they can be used in other files/locations by being called and extended"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Code.org](/images/lf.PNG \"Code.org PatternPainter\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Code.org](/images/neighborhood.PNG \"Code.org Neighborhood\")"
+   ]
   }
  ],
  "metadata": {
