--- a/_notebooks/2022-09-05-javagui.ipynb
+++ b/_notebooks/2022-09-05-javagui.ipynb
@@ -15,17 +15,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -174,7 +163,7 @@
     "            case 3:\n",
     "                Scanner input2 = new Scanner(System.in);\n",
     "                System.out.println(\"How many milligrams?\");\n",
-    "                double kilo = input2.nextDouble();\n",
+    "                double kilo = input2.nextDouble(); //doubles used to produce more exact answers\n",
     "                System.out.println(\"That is equivalent to \" + kilo/1000000 + \" kilograms.\");\n",
     "                input2.close();\n",
     "                break;\n",
@@ -200,6 +189,13 @@
     "\n",
     "}\n",
     "Menu.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Java GUI"
    ]
   },
   {
@@ -315,6 +311,20 @@
     "    }\n",
     "}\n",
     "MenuJFrame.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Java GUI notebook not working\n",
+    "\n",
+    "My takeaways:\n",
+    "- Multiple inputs are unable to be accepted\n",
+    "- JTextField used to get inputs. This will be needed to accept inputs for a calculator\n",
+    "- \"msg\" object is used. Thus methods must be based around this object, so things made with Scanner cannot just be copy and pasted over\n",
+    "- \"implements\" used in constructor signature. These are used to implement an interface; extends cannot replace it here\n",
+    "- Need to read up on Swing documentation. There is a lot more to be learned before randomly attempting something and failing\n"
    ]
   }
  ],
