demonstrating use of objects/classes

--- a/_notebooks/2022-09-05-javagui.ipynb
+++ b/_notebooks/2022-09-05-javagui.ipynb
@@ -18,6 +18,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Use of objects and classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// import packages\n",
+    "import org.code.neighborhood.*;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Defining a class called MyNeighborhood\n",
+    "public class MyNeighborhood {\n",
+    "    public static void main(String[] args) {\n",
+    "        // creating an instance of PainterPlus() with variable name myBackgroundPainter\n",
+    "        PainterPlus myPainterPlus = new PainterPlus();\n",
+    "        // Running turnRight() method from PainterPlus instance\n",
+    "        myPainterPlus.turnRight();\n",
+    "    }\n",
+    "  }\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// Creating subclass of PainterPlus which inherits attributes from superclass Painter\n",
+    "public class PainterPlus extends Painter {\n",
+    "    public PainterPlus() {\n",
+    "      super();\n",
+    "    }\n",
+    "    // Defining public turnRight() method with no return types in PainterPlus class\n",
+    "    public void turnRight() {\n",
+    "      turnLeft();\n",
+    "      turnLeft();\n",
+    "      turnLeft();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Java Menu for Physics - Milligrams to other measurements\n",
     "- No rounding: everything is made exact, double is used to ensure this"
    ]
@@ -25,11 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -201,11 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.awt.*;\n",
@@ -338,7 +385,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
