--- a/_notebooks/2022-09-05-javagui.ipynb
+++ b/_notebooks/2022-09-05-javagui.ipynb
@@ -251,16 +251,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "The Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import java.awt.*;\n",
     "import java.awt.event.*;\n",
     "import javax.swing.*;\n",
     "import java.util.Timer;\n",
     "import java.util.TimerTask;\n",
-    "import java.swing.TextField;\n",
     "\n",
     "// Graphical-User-Interface for Desktop in Java using Java Swing. \n",
     "public class MenuJFrame extends JFrame implements ActionListener {\n",
@@ -313,11 +321,11 @@
     "        final String[] COLORS = {\"Red\", \"Green\", \"Blue\"};  // add more colors here\n",
     " \t    final String start_msg = \"<html>\";  // html building\n",
     "       \tfinal String end_msg = \"</html>\";\n",
-    "       \tfinal String hash = \"#\";\n",
+    "       \tfinal String hash = \"/\";\n",
     "\n",
     "        // run code based on the menuItem that was selected\n",
     "        if ( selection.equals(MENUS[0]) ) {  // Hello Action\n",
-    "            msg = \"Hello, World\";\n",
+    "            msg = \"Hello, CSA\";\n",
     "            message.setText(msg);\n",
     "        } else if ( selection.equals(MENUS[1]) ) { // Color Action\n",
     "            msg = start_msg + \"<p>\" + selection + \"</p>\";\n",
@@ -368,7 +376,7 @@
     "\n",
     "My takeaways:\n",
     "- Multiple inputs are unable to be accepted\n",
-    "- JTextField used to get inputs. This will be needed to accept inputs for a calculator\n",
+    "- JTextField used to get inputs. This will be needed to accept inputs for a calculator unless a bunch of buttons are used\n",
     "- \"msg\" object is used. Thus methods must be based around this object, so things made with Scanner cannot just be copy and pasted over\n",
     "- \"implements\" used in constructor signature. These are used to implement an interface; extends cannot replace it here\n",
     "- Need to read up on Swing documentation. There is a lot more to be learned before randomly attempting something and failing\n"
