--- a/_notebooks/2022-09-05-boolean_ifs.ipynb
+++ b/_notebooks/2022-09-05-boolean_ifs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Iteration Notebook\n",
+    "# Boolean Expressions and If Statements\n",
     "> Focus on Ifs, Switch, Expressions and how to build control structures in Java.\n",
     "\n",
     "- title: Boolean Expressions and If Statements\n",
@@ -25,11 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "// All of the boolean expressions below evaluate to true\n",
@@ -67,11 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -103,11 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -141,11 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -183,11 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -289,11 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -335,7 +311,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
