--- a/_notebooks/2022-09-12-iteration.ipynb
+++ b/_notebooks/2022-09-12-iteration.ipynb
@@ -15,11 +15,309 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Array manipulation\n",
+    "> Vertically"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Cars approaching a mountainside Loopy\n",
+      "3 cars approaching the road...\n",
+      "                                             _   \n",
+      "               ___                         (_)   \n",
+      "            _//XXX\\   \n",
+      " _          /XXXXXX\\_                                    __   \n",
+      "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
+      "  \\__/  \\_/__       \\ \\                       _//X\\__   /XX XXX\\____/XXX\\   \n",
+      "  \\  ___   \\/  \\_      \\ \\               __   _/      \\_/  _/  -   __  -  \\__/   \n",
+      "  ___/   \\__/   \\ \\__     \\__           /  \\_/  _ _ \\  \\     __  /  \\____//   \n",
+      "  /  __    \\  /     \\ \\_   _/_\\___     _/    /           \\___/  \\/     __/   \n",
+      "  __/_______\\________\\__\\_/________\\_ _/_____/_____________/_______\\____/_______   \n",
+      "                                    /|\\   \n",
+      "                                   / | \\   \n",
+      "                                  /  |  \\   \n",
+      "                                 /   |   \\   \n",
+      "                                /    |    \\   \n",
+      "                               /     |     \\   \n",
+      "                              /      |      \\   \n",
+      "                             /       |       \\   \n",
+      "                            /        |        \\   \n",
+      "                           /         |         \\   \n",
+      "\n",
+      "                                .--------.   \n",
+      "                              .'          `.  \n",
+      "                            _`.-. _...._ .-.'_  \n",
+      "                           (_)`-' __)(__ `-'(_)  \n",
+      "                          (....__|7BYP715|__....) \n",
+      "                           | |    ~~~~~~    | |   \n",
+      "                           `-'              `-'    \n",
+      "\n",
+      "                               _.--------._ \n",
+      "                             ,'.----------.', \n",
+      "                            /='------------`=\\ \n",
+      "                          .F_______...._______Y. \n",
+      "                          |(_)(_) ______ (_)(_)| \n",
+      "                          (....__|18HG8G|__....) \n",
+      "                           | |    ~~~~~~    | | \n",
+      "                           `-'              `-' \n",
+      "\n",
+      "                               ____________ \n",
+      "                             .F............T. \n",
+      "                             | .----------. | \n",
+      "                             | |',' ',' , | | \n",
+      "                             | `----------' | \n",
+      "                            _|.-. _...._ .-.|_ \n",
+      "                           (_)`-' __[]__ `-'(_) \n",
+      "                          (....__|93J5UN3|__....) \n",
+      "                           | |    ~~~~~~    | | \n",
+      "                           `-'              `-' \n",
+      "\n",
+      "2 cars approaching the road...\n",
+      "                                             _   \n",
+      "               ___                         (_)   \n",
+      "            _//XXX\\   \n",
+      " _          /XXXXXX\\_                                    __   \n",
+      "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
+      "  \\__/  \\_/__       \\ \\                       _//X\\__   /XX XXX\\____/XXX\\   \n",
+      "  \\  ___   \\/  \\_      \\ \\               __   _/      \\_/  _/  -   __  -  \\__/   \n",
+      "  ___/   \\__/   \\ \\__     \\__           /  \\_/  _ _ \\  \\     __  /  \\____//   \n",
+      "  /  __    \\  /     \\ \\_   _/_\\___     _/    /           \\___/  \\/     __/   \n",
+      "  __/_______\\________\\__\\_/________\\_ _/_____/_____________/_______\\____/_______   \n",
+      "                                    /|\\   \n",
+      "                                   / | \\   \n",
+      "                                  /  |  \\   \n",
+      "                                 /   |   \\   \n",
+      "                                /    |    \\   \n",
+      "                               /     |     \\   \n",
+      "                              /      |      \\   \n",
+      "                             /       |       \\   \n",
+      "                            /        |        \\   \n",
+      "                           /         |         \\   \n",
+      "\n",
+      "                                .--------.   \n",
+      "                              .'          `.  \n",
+      "                            _`.-. _...._ .-.'_  \n",
+      "                           (_)`-' __)(__ `-'(_)  \n",
+      "                          (....__|7BYP715|__....) \n",
+      "                           | |    ~~~~~~    | |   \n",
+      "                           `-'              `-'    \n",
+      "\n",
+      "                               _.--------._ \n",
+      "                             ,'.----------.', \n",
+      "                            /='------------`=\\ \n",
+      "                          .F_______...._______Y. \n",
+      "                          |(_)(_) ______ (_)(_)| \n",
+      "                          (....__|18HG8G|__....) \n",
+      "                           | |    ~~~~~~    | | \n",
+      "                           `-'              `-' \n",
+      "\n",
+      "1 cars approaching the road...\n",
+      "                                             _   \n",
+      "               ___                         (_)   \n",
+      "            _//XXX\\   \n",
+      " _          /XXXXXX\\_                                    __   \n",
+      "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
+      "  \\__/  \\_/__       \\ \\                       _//X\\__   /XX XXX\\____/XXX\\   \n",
+      "  \\  ___   \\/  \\_      \\ \\               __   _/      \\_/  _/  -   __  -  \\__/   \n",
+      "  ___/   \\__/   \\ \\__     \\__           /  \\_/  _ _ \\  \\     __  /  \\____//   \n",
+      "  /  __    \\  /     \\ \\_   _/_\\___     _/    /           \\___/  \\/     __/   \n",
+      "  __/_______\\________\\__\\_/________\\_ _/_____/_____________/_______\\____/_______   \n",
+      "                                    /|\\   \n",
+      "                                   / | \\   \n",
+      "                                  /  |  \\   \n",
+      "                                 /   |   \\   \n",
+      "                                /    |    \\   \n",
+      "                               /     |     \\   \n",
+      "                              /      |      \\   \n",
+      "                             /       |       \\   \n",
+      "                            /        |        \\   \n",
+      "                           /         |         \\   \n",
+      "\n",
+      "                                .--------.   \n",
+      "                              .'          `.  \n",
+      "                            _`.-. _...._ .-.'_  \n",
+      "                           (_)`-' __)(__ `-'(_)  \n",
+      "                          (....__|7BYP715|__....) \n",
+      "                           | |    ~~~~~~    | |   \n",
+      "                           `-'              `-'    \n",
+      "\n",
+      "0 cars approaching the road...\n",
+      "                                             _   \n",
+      "               ___                         (_)   \n",
+      "            _//XXX\\   \n",
+      " _          /XXXXXX\\_                                    __   \n",
+      "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
+      "  \\__/  \\_/__       \\ \\                       _//X\\__   /XX XXX\\____/XXX\\   \n",
+      "  \\  ___   \\/  \\_      \\ \\               __   _/      \\_/  _/  -   __  -  \\__/   \n",
+      "  ___/   \\__/   \\ \\__     \\__           /  \\_/  _ _ \\  \\     __  /  \\____//   \n",
+      "  /  __    \\  /     \\ \\_   _/_\\___     _/    /           \\___/  \\/     __/   \n",
+      "  __/_______\\________\\__\\_/________\\_ _/_____/_____________/_______\\____/_______   \n",
+      "                                    /|\\   \n",
+      "                                   / | \\   \n",
+      "                                  /  |  \\   \n",
+      "                                 /   |   \\   \n",
+      "                                /    |    \\   \n",
+      "                               /     |     \\   \n",
+      "                              /      |      \\   \n",
+      "                             /       |       \\   \n",
+      "                            /        |        \\   \n",
+      "                           /         |         \\   \n",
+      "\n",
+      "0000000000000000000000000000000000\n",
+      "             THE END              \n"
+     ]
+    }
+   ],
+   "source": [
+    "class MonkeyLoop {\n",
+    "    //The area between class definition and the 1st method is where we keep data for object in Java\n",
+    "    String [][] monkeys;    //2D Array: AP CSA Unit 8: 2D array of strings\n",
+    "                            //2D array is like a grid [x][y]\n",
+    "                            // or like a spreadsheet [row][column]\n",
+    "\n",
+    "    /**\n",
+    "     * Constructor initializes a 2D array of Monkeys\n",
+    "     */\n",
+    "    public MonkeyLoop() {\n",
+    "        //Storing Data in 2D arrays\n",
+    "        monkeys = new String[][]{   //2D array above is just a name, \"new\" makes a container (\"object\")\n",
+    "                //Monkey 0\n",
+    "                {\n",
+    "    \"                                             _  \",\n",
+    "    \"               ___                         (_)  \",\n",
+    "    \"            _//XXX\\\\  \",\n",
+    "    \" _          /XXXXXX\\\\_                                    __  \",\n",
+    "    \"X\\\\__    __/X XXXX XX\\\\                           _       /XX\\\\__      ___  \",\n",
+    "    \"  \\\\__/  \\\\_/__       \\\\ \\\\                       _//X\\\\__   /XX XXX\\\\____/XXX\\\\  \",\n",
+    "    \"  \\\\  ___   \\\\/  \\\\_      \\\\ \\\\               __   _/      \\\\_/  _/  -   __  -  \\\\__/  \",\n",
+    "    \"  ___/   \\\\__/   \\\\ \\\\__     \\\\__           /  \\\\_/  _ _ \\\\  \\\\     __  /  \\\\____//  \",\n",
+    "    \"  /  __    \\\\  /     \\\\ \\\\_   _/_\\\\___     _/    /           \\\\___/  \\\\/     __/  \",\n",
+    "    \"  __/_______\\\\________\\\\__\\\\_/________\\\\_ _/_____/_____________/_______\\\\____/_______  \",\n",
+    "    \"                                    /|\\\\  \",\n",
+    "    \"                                   / | \\\\  \",\n",
+    "    \"                                  /  |  \\\\  \",\n",
+    "    \"                                 /   |   \\\\  \",\n",
+    "    \"                                /    |    \\\\  \",\n",
+    "    \"                               /     |     \\\\  \",\n",
+    "    \"                              /      |      \\\\  \",\n",
+    "    \"                             /       |       \\\\  \",\n",
+    "    \"                            /        |        \\\\  \",\n",
+    "    \"                           /         |         \\\\  \"\n",
+    "                    //     \"*\"\n",
+    "                    //    \"***\"\n",
+    "                    //     \"|\"\n",
+    "                    //   \"*****\"\n",
+    "                    //  \"*******\"\n",
+    "                    // \"*********\"\n",
+    "\n",
+    "                },\n",
+    "                //Monkey 1\n",
+    "                {\n",
+    "                \"                                .--------.  \",     \n",
+    "                \"                              .'          `. \",      \n",
+    "                \"                            _`.-. _...._ .-.'_ \",   \n",
+    "                \"                           (_)`-' __)(__ `-'(_) \",\n",
+    "                \"                          (....__|7BYP715|__....)\",\n",
+    "                \"                           | |    ~~~~~~    | |  \", \n",
+    "                \"                           `-'              `-'   \"\n",
+    "                \n",
+    "                },\n",
+    "                //Monkey 2\n",
+    "                {\n",
+    "               \"                               _.--------._\",\n",
+    "               \"                             ,'.----------.',\",\n",
+    "               \"                            /='------------`=\\\\\",\n",
+    "               \"                          .F_______...._______Y.\",\n",
+    "               \"                          |(_)(_) ______ (_)(_)|\",\n",
+    "               \"                          (....__|18HG8G|__....)\",\n",
+    "               \"                           | |    ~~~~~~    | |\",\n",
+    "               \"                           `-'              `-'\",\n",
+    "                },\n",
+    "                //Monkey 3\n",
+    "                {\n",
+    "                \"                               ____________\",\n",
+    "                \"                             .F............T.\",\n",
+    "                \"                             | .----------. |\",\n",
+    "                \"                             | |',' ',' , | |\",           \n",
+    "                \"                             | `----------' |\",       \n",
+    "                \"                            _|.-. _...._ .-.|_\",   \n",
+    "                \"                           (_)`-' __[]__ `-'(_)\",   \n",
+    "                \"                          (....__|93J5UN3|__....)\", \n",
+    "                \"                           | |    ~~~~~~    | |\",   \n",
+    "                \"                           `-'              `-'\"  \n",
+    "                },\n",
+    "        };\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "     * Loop and print monkeys in array\n",
+    "     * ... repeat until you reach zero  ...\n",
+    "     */\n",
+    "    public void printPoem() {\n",
+    "        //begin the poem\n",
+    "        System.out.println();\n",
+    "        System.out.println(\"Cars approaching a mountainside Loopy\");\n",
+    "\n",
+    "        // monkeys (non-primitive) defined in constructor knows its length\n",
+    "        int monkeyCount = monkeys.length;\n",
+    "        for (int i = monkeyCount; i >= 1; i--)  //loops through 2D array length backwards\n",
+    "        {\n",
+    "\n",
+    "            //this print statement shows current count of Monkeys\n",
+    "            //  concatenation (+) of the loop variable and string to form a countdown message\n",
+    "            System.out.println(i - 1 + \" cars approaching the road...\");\n",
+    "\n",
+    "            //how many separate parts are there in a monkey monkey?\n",
+    "            for (int row = 0; row < monkeyCount; row++) {  //cycles through \"cells\" of 2d array\n",
+    "\n",
+    "                /*cycles through columns to print\n",
+    "                each monkey part by part, will eventually print entire column*/\n",
+    "                for (int col = 0; col < monkeys[row].length; col++) {\n",
+    "\n",
+    "                    // prints specific part of the monkey from the column\n",
+    "                    System.out.print(monkeys[row][col] + \" \");\n",
+    "\n",
+    "                    //this is new line between separate parts\n",
+    "                    System.out.println();\n",
+    "                }\n",
+    "\n",
+    "                //this new line gives separation between stanza of poem\n",
+    "                System.out.println();\n",
+    "            }\n",
+    "\n",
+    "            //countdown for poem, decrementing monkeyCount variable by 1\n",
+    "            monkeyCount -= 1;\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"0000000000000000000000000000000000\");\n",
+    "        System.out.println(\"             THE END              \");\n",
+    "    }\n",
+    "\n",
+    "    /**\n",
+    "    * A Java Driver/Test method that is the entry point for execution\n",
+    "    */\n",
+    "    public static void main(String[] args)  {\n",
+    "        new MonkeyLoop().printPoem();   //a new monkey list and output in one step\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "MonkeyLoop.main(null);"
+   ]
   }
  ],
  "metadata": {
@@ -32,7 +330,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
