--- a/_notebooks/2022-09-13-iteration.ipynb
+++ b/_notebooks/2022-09-13-iteration.ipynb
@@ -24,8 +24,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -34,8 +38,8 @@
       "\n",
       "Cars approaching a mountainside Loopy\n",
       "3 cars approaching the road...\n",
-      "                                             _   \n",
-      "               ___                         (_)   \n",
+      "                                           _   \n",
+      "              ___                         (_)   \n",
       "            _//XXX\\   \n",
       " _          /XXXXXX\\_                                    __   \n",
       "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
@@ -84,8 +88,8 @@
       "                           `-'              `-' \n",
       "\n",
       "2 cars approaching the road...\n",
-      "                                             _   \n",
-      "               ___                         (_)   \n",
+      "                                           _   \n",
+      "              ___                         (_)   \n",
       "            _//XXX\\   \n",
       " _          /XXXXXX\\_                                    __   \n",
       "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
@@ -123,8 +127,8 @@
       "                           `-'              `-' \n",
       "\n",
       "1 cars approaching the road...\n",
-      "                                             _   \n",
-      "               ___                         (_)   \n",
+      "                                           _   \n",
+      "              ___                         (_)   \n",
       "            _//XXX\\   \n",
       " _          /XXXXXX\\_                                    __   \n",
       "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
@@ -153,8 +157,8 @@
       "                           `-'              `-'    \n",
       "\n",
       "0 cars approaching the road...\n",
-      "                                             _   \n",
-      "               ___                         (_)   \n",
+      "                                           _   \n",
+      "              ___                         (_)   \n",
       "            _//XXX\\   \n",
       " _          /XXXXXX\\_                                    __   \n",
       "X\\__    __/X XXXX XX\\                           _       /XX\\__      ___   \n",
@@ -194,8 +198,8 @@
     "        monkeys = new String[][]{   //2D array above is just a name, \"new\" makes a container (\"object\")\n",
     "                //Monkey 0\n",
     "                {\n",
-    "    \"                                             _  \",\n",
-    "    \"               ___                         (_)  \",\n",
+    "    \"                                           _  \",\n",
+    "    \"              ___                         (_)  \",\n",
     "    \"            _//XXX\\\\  \",\n",
     "    \" _          /XXXXXX\\\\_                                    __  \",\n",
     "    \"X\\\\__    __/X XXXX XX\\\\                           _       /XX\\\\__      ___  \",\n",
@@ -326,7 +330,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
