project planning nb

--- a/_notebooks/2022-09-25-projectplanning.ipynb
+++ b/_notebooks/2022-09-25-projectplanning.ipynb
@@ -18,7 +18,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Front page\n",
+    "- Use of API for \"Song of the Day\" - pulls from most popular song on Billboard Hot 100\n",
+    "- Recommended songs based on user preference - what their results from the quiz were. If user doesn't have an account, encourage to sign up to unlock this section"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](my_icons/frontpage.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Library page\n",
+    "- Virtually all music genres in one place"
    ]
   },
   {
@@ -32,7 +49,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Genre page\n",
+    "- Blurb about genre\n",
+    "- Lists 3 most popular artists from genre\n",
+    "- Breadcrumbs nav"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](my_icons/genre.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Artist page\n",
+    "- Blurb about artist\n",
+    "- List different things about them (Shown in image)\n",
+    "- Breadcrumbs nav"
    ]
   },
   {
@@ -46,6 +83,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Quiz page\n",
+    "- Example of what the quiz page would look like"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](my_icons/quiz.PNG)"
    ]
   },
@@ -53,7 +98,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Question page\n",
+    "- Example of what a question would look like"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](my_icons/question.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results page\n",
+    "- What is recommended and not recommended based on answers provided\n",
+    "- Users can retake as many times as they want if they are unhappy with results - we cannot guarantee 100% accuracy"
    ]
   },
   {
