--- a/_notebooks/2022-09-25-projectplanning.ipynb
+++ b/_notebooks/2022-09-25-projectplanning.ipynb
@@ -124,6 +124,41 @@
    "source": [
     "![](my_icons/result.PNG)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Quiz Data Flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](my_icons/questionflow.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](my_icons/scoreflow.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](my_icons/accountflow.PNG)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](my_icons/updateflow.PNG)"
+   ]
   }
  ],
  "metadata": {
