js nb [unfinished]

--- a/_notebooks/2022-08-25-js.ipynb
+++ b/_notebooks/2022-08-25-js.ipynb
@@ -16,60 +16,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking at dynamic nature of types in JavaScript\n",
-      "string ; hello\n",
-      "number ; 2020\n",
-      "object ; [ 1, 2, 3 ]\n",
-      "object ; Person { name: 'Mr M', ghID: 'jm1021', classOf: 1977, role: '' }\n",
-      "string ; {\"name\":\"Mr M\",\"ghID\":\"jm1021\",\"classOf\":1977,\"role\":\"\"}\n",
-      "object ; Person { name: 'Mr M', ghID: 'jm1021', classOf: 1977, role: 'Teacher' }\n",
-      "string ; {\"name\":\"Mr M\",\"ghID\":\"jm1021\",\"classOf\":1977,\"role\":\"Teacher\"}\n"
+      "Song1 { name: 'Power', artist: 'Kanye West', genre: 'Rap' }\n"
      ]
     }
    ],
    "source": [
     "function logItType(output) {\n",
-    "    console.log(typeof output, \";\", output);\n",
+    "    console.log(output);\n",
     "}\n",
-    "logItType(\"hello\"); // String\n",
-    "logItType(2020);    // Number\n",
-    "logItType([1, 2, 3]);  // Object is generic for this Array, which similar to Python List\n",
-    "// define a function to hold data for a Person\n",
-    "function Person(name, ghID, classOf) {\n",
+    "function Song1(name, artist, genre) {\n",
     "    this.name = name;\n",
-    "    this.ghID = ghID;\n",
-    "    this.classOf = classOf;\n",
-    "    this.role = \"\";\n",
-    "}\n",
-    "\n",
-    "// define a setter for role in Person data\n",
-    "Person.prototype.setRole = function(role) {\n",
-    "    this.role = role;\n",
+    "    this.artist = artist;\n",
+    "    this.genre = genre;\n",
     "}\n",
     "\n",
     "// define a JSON conversion \"method\" associated with Person\n",
-    "Person.prototype.toJSON = function() {\n",
-    "    const obj = {name: this.name, ghID: this.ghID, classOf: this.classOf, role: this.role};\n",
+    "Song1.prototype.toJSON = function() {\n",
+    "    const obj = {name: this.name, artist: this.artist, genre: this.genre};\n",
     "    const json = JSON.stringify(obj);  // json/string is useful when passing data on internet\n",
     "    return json;\n",
     "}\n",
     "\n",
     "// make a new Person and assign to variable teacher\n",
-    "var teacher = new Person(\"Mr M\", \"jm1021\", 1977);  // object type is easy to work with in JavaScript\n",
-    "logItType(teacher);  // before role\n",
-    "logItType(teacher.toJSON());  // ok to do this even though role is not yet defined\n",
+    "var popularSong = new Song1(\"Power\", \"Kanye West\", \"Rap\");  // object type is easy to work with in JavaScript\n",
+    "logItType(popularSong); \n",
+    "// logItType(teacher.toJSON());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function logItType(output) {\n",
+    "  console.log(output);\n",
+    "}\n",
+    "function Song1(name, artist, genre) {\n",
+    "  this.name = name;\n",
+    "  this.artist = artist;\n",
+    "  this.genre = genre;\n",
+    "}\n",
     "\n",
-    "// output of Object and JSON/string associated with Teacher\n",
-    "teacher.setRole(\"Teacher\");   // set the role\n",
-    "logItType(teacher); \n",
-    "logItType(teacher.toJSON());"
+    "// define a JSON conversion \"method\" associated with Person\n",
+    "Song1.prototype.toJSON = function() {\n",
+    "  const obj = {name: this.name, artist: this.artist, genre: this.genre};\n",
+    "  const json = JSON.stringify(obj);  // json/string is useful when passing data on internet\n",
+    "  return json;\n",
+    "}\n",
+    "\n",
+    "// make a new Person and assign to variable teacher\n",
+    "var popularSong = new Song1(\"Power\", \"Kanye West\", \"Rap\");  // object type is easy to work with in JavaScript\n",
+    "logItType(popularSong); \n",
+    "// logItType(teacher.toJSON());\n",
+    "\n",
+    "const resultContainer = document.getElementById(\"result\");\n",
+    "for (const row of data) {\n",
+    "    // tr for each row\n",
+    "    const tr = document.createElement(\"tr\");\n",
+    "    // td for each column\n",
+    "    const name = document.createElement(\"td\");\n",
+    "    const artist = document.createElement(\"td\");\n",
+    "    const genre = document.createElement(\"td\");\n",
+    "    // data is specific to the API\n",
+    "    name.innerHTML = row.name;\n",
+    "    artist.innerHTML = row.artist; \n",
+    "    genre.innerHTML = row.genre; \n",
+    "    // this build td's into tr\n",
+    "    tr.appendChild(name);\n",
+    "    tr.appendChild(artist);\n",
+    "    tr.appendChild(genre);\n",
+    "    // add HTML to container\n",
+    "    resultContainer.appendChild(tr);\n",
+    "}"
    ]
   }
  ],
