last ditch attempt

--- a/_notebooks/2022-10-02-img-manipulation.ipynb
+++ b/_notebooks/2022-10-02-img-manipulation.ipynb
@@ -10,6 +10,7 @@
     "- title: Image Manipulation Notebook\n",
     "- toc: true\n",
     "- categories: [jupyter]\n",
+    "- permalink: /unit/3\n",
     "- image: images/tools.png"
    ]
   },
